docs/pages/versions/v57.0.0/sdk/ui/jetpack-compose/spacer.mdx
---
title: Spacer
description: A Jetpack Compose Spacer component for adding flexible space between elements.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

> **info** For cross-platform usage, see the universal [`Spacer`](../universal/spacer) — it renders the appropriate native component per platform.

Expo UI Spacer matches the official Jetpack Compose [Spacer](https://developer.android.com/reference/kotlin/androidx/compose/foundation/layout/package-summary#Spacer) API and is used to add flexible or fixed-size space between elements in a layout.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/spacer/android-light.webp"
  darkSrc="/static/images/expo-ui/spacer/android-dark.webp"
  alt="Two boxes pushed to opposite ends of a Row by a Spacer with weight modifier"
/>

## Installation

<APIInstallSection />

## Usage

### Spacer with weight

Use the `weight()` modifier to make the spacer fill available space proportionally within a `Row` or `Column`.

<ComponentExample
  title="SpacerWeightExample.tsx"
  src="/static/images/expo-ui/examples/spacer-weight-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/spacer-weight-android-dark.webp"
  alt="The labels Left and Right pushed to opposite ends of a row by a weighted spacer">

```tsx
import {
  Host,
  Row,
  Spacer,
  Text,
  useMaterialColors,
} from '@expo/ui/jetpack-compose';
import {
  fillMaxWidth,
  weight,
} from '@expo/ui/jetpack-compose/modifiers';

export default function SpacerWeightExample() {
  const colors = useMaterialColors();

  return (
    <Host
      matchContents={{ vertical: true }}
      style={{ width: '100%' }}>
      <Row modifiers={[fillMaxWidth()]}>
        <Text style={{ fontSize: 28 }} color={colors.onBackground}>
          Left
        </Text>
        <Spacer modifiers={[weight(1)]} />
        <Text style={{ fontSize: 28 }} color={colors.onBackground}>
          Right
        </Text>
      </Row>
    </Host>
  );
}
```

</ComponentExample>

### Spacer with fixed size

Use a `height` or `width` modifier to create a spacer with a fixed dimension.

<ComponentExample
  title="SpacerFixedSizeExample.tsx"
  src="/static/images/expo-ui/examples/spacer-fixed-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/spacer-fixed-android-dark.webp"
  alt="Two stacked labels separated by a fixed 24dp vertical gap">

```tsx
import {
  Host,
  Column,
  Spacer,
  Text,
  useMaterialColors,
} from '@expo/ui/jetpack-compose';
import { height } from '@expo/ui/jetpack-compose/modifiers';

export default function SpacerFixedSizeExample() {
  const colors = useMaterialColors();

  return (
    <Host matchContents>
      <Column>
        <Text style={{ fontSize: 28 }} color={colors.onBackground}>
          Above
        </Text>
        <Spacer modifiers={[height(24)]} />
        <Text style={{ fontSize: 28 }} color={colors.onBackground}>
          Below (24dp gap)
        </Text>
      </Column>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { Spacer } from '@expo/ui/jetpack-compose';
```

<APISection
  packageName="expo-ui/jetpack-compose/spacer"
  apiName="Spacer"
/>
